add mnn backend

--- a/FastDeploy.cmake.in
+++ b/FastDeploy.cmake.in
@@ -25,6 +25,7 @@ set(RKNN2_TARGET_SOC "@RKNN2_TARGET_SOC@")
 set(ENABLE_ORT_BACKEND @ENABLE_ORT_BACKEND@)
 set(ENABLE_RKNPU2_BACKEND @ENABLE_RKNPU2_BACKEND@)
 set(ENABLE_TVM_BACKEND @ENABLE_TVM_BACKEND@)
+set(ENABLE_MNN_BACKEND @ENABLE_MNN_BACKEND@)
 set(ENABLE_HORIZON_BACKEND @ENABLE_HORIZON_BACKEND@)
 set(ENABLE_SOPHGO_BACKEND @ENABLE_SOPHGO_BACKEND@)
 set(ENABLE_LITE_BACKEND @ENABLE_LITE_BACKEND@)
